alteracao do titulo do projeto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de compras</title>
+    <title>Estamos na branch develop</title>
 </head>
 <body>
     <h1>Terça feira/hoje</h1>
